# pub-aie7-certification-challenge

./: .editorconfig  .gitignore  BACKEND_SETUP.md  CLAUDE.md  Certification_Challenge.md  DEVELOPMENT_PLAN.md  DOCKER_README.md  Dockerfile  README.md  debug_ragas.py  docker-compose.yaml  initialize_retrieval_test.py  package-lock.json  pyproject.toml  start_backend.py  test_qdrant_direct.py  test_retrieval_working.py  test_retriever.py  test_retriever_fixed.py
api/: run_server.py  test_api.py
api/app/: main.py
api/config/: agentic_workflow.yaml  ai_models.yaml  application.yaml  data_processing.yaml  golden_dataset.yaml  vector_database.yaml
docs/: BACKEND_SETUP.md  VIDEO_DEMO_OUTLINE.md  enhanced_agentic_app.ipynb  poc_app.ipynb  ragas_evaluation_guide.md
eval/: README.md  __init__.py  ragas_demo.py  ragas_evaluation_service.py
eval/fixtures/: golden_dataset_kg_manual_20250803_190634.json  golden_dataset_manual_20250804_095231.json  test_dataset.json  test_dataset_markdown.json
eval/output/: final_retriever_comparison_20250804_053042.csv  final_retriever_comparison_20250804_053042.json  quick_retriever_comparison_20250804_052720.json  quick_retriever_comparison_20250804_052922.json  ragas_retriever_comparison_20250804_102842.csv  ragas_retriever_comparison_20250804_102842.json  ragas_retriever_comparison_20250804_125811.csv  ragas_retriever_comparison_20250804_125811.json  retriever_comparison_20250803_200711.json  (+6 more)
eval/scripts/: debug_ragas.py  (+10 more)
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
(+28 files in other folders)
