[project]
name = "federal-ethics-chatbot"
version = "0.1.0"
description = "Federal Ethics Compliance Chatbot with Agentic RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI Backend
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    
    # LangChain and AI
    "langchain>=0.1.0",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    
    # Vector DB and Search
    "qdrant-client>=1.7.0",
    "tavily-python>=0.3.0",
    
    # Document Processing
    "pymupdf>=1.26.1",
    "tiktoken>=0.5.2",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.5.8",
    "pandas>=2.3.0",
    "pyyaml>=6.0.0",
    
    # Jupyter for notebooks
    "jupyter>=1.1.1",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]
